--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
       "10.10.0.95:19999",
 	  "10.10.0.96:19999",
 	  "10.10.0.98:19999",
+      "10.10.0.153:19999"
     ],
     "urlsFile": "urls.txt",
     "param": {
@@ -16,6 +17,7 @@
   },
   "slave": {
     "host": "0.0.0.0:19999",
-    "masterHost": "10.10.0.153:9999"
+    "masterHost": "10.10.0.153:9999",
+    "timeout": 5
   }
 }
